SFDCProject/src/objects/LMSInfo__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <label>Certification Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LMS Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Certification_Expiration_Date__c</columns>
        <columns>Grade__c</columns>
        <columns>Status__c</columns>
        <columns>Exam_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMS-{00000000}</displayFormat>
        <label>LMS Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Info</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>